--- a/FlowerBackApp2/FlowerBackApp2/Pages/FlowersPage.xaml
+++ b/FlowerBackApp2/FlowerBackApp2/Pages/FlowersPage.xaml
@@ -1,10 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FlowerBackApp2.Pages.FlowersPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin Forms!" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="FlowerBackApp2.Pages.FlowersPage"
+             Title="Flowers"
+             BindingContext="{Binding Main, Source={StaticResource Locator}}">
+    <ListView ItemsSource="{Binding Flowers}}"
+              HasUnevenRows="True">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <Grid Padding="8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Image Source="icon.png"
+                               VerticalOptions="Start"
+                               WidthRequest="50"
+                               HeightRequest="50"/>
+                        <StackLayout Grid.Column="1">
+                            
+                            <Label FontAttributes="Bold"
+                                   VerticalOptions="Center"
+                                   Text="{Binding Description}"/>
+                            
+                            <Label VerticalOptions="Center"
+                                   Text="{Binding Price, StringFormat='{0:C2}'}"/>
+                            
+                        </StackLayout>
+                    </Grid>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
+
 </ContentPage>
